<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Name of the application, shown in the application's title bar. -->
    <string name="app_name">Notifier</string>

    <!-- Label on a button that the user clicks to accept a license agreement. -->
    <string name="accept">Accept</string>

    <!-- A single button shown on informative popups, like EULA, open source licenses and About -->
    <string name="ok">Accept</string>

    <!-- Label on a button that the user clicks to decline something (for example, a license agreement). -->
    <string name="decline">Decline</string>

    <!--
    Label on a button that allows the user to cancel an operation before it starts. For
    example, this may be a button on a dialog that says "This will delete your data."
    -->
    <string name="cancel">Cancel</string>

    <!-- Text in the menu for logout -->
    <string name="action_logout">Log out</string>

    <!-- Welcome text indicating for login or sign up -->
    <string name="welcome_button_signup">Sign Up</string>
    <string name="welcome_button_login">Log In</string>

    <!-- Hint for a username field -->
    <string name="login_email">Email</string>

    <!-- Hint for a password field -->
    <string name="login_password">Password</string>

    <!-- Hint for generic login text -->
    <string name="login_login">Log In</string>

    <!-- Message presented while logging -->
    <string name="login_logging">Logging In</string>

    <!-- Message shown in dialog when user could not be logged in -->
    <string name="login_failed_text">Check fields</string>

    <!-- Hint for a full name field -->
    <string name="signup_name">Full name</string>

    <!-- Hint for a cellphone field -->
    <string name="signup_cellphone">Cellphone</string>

    <!-- Hint for a email field -->
    <string name="signup_email">Email</string>

    <!-- Hint for a password field -->
    <string name="signup_password">Password</string>

    <!-- Hint for generic sign up text -->
    <string name="signup_signup">Sign Up</string>

    <!-- Message presented while signingup -->
    <string name="signup_signingup">Signing Up</string>

    <!-- Message shown in dialog when user could not be logged in -->
    <string name="signup_failed_text">Check fields</string>

    <!-- Label for Browse Notifications activity -->
    <string name="title_explore">Notifications</string>

    <!-- Label for Notification Detail activity -->
    <string name="title_notification_details">Detail</string>

    <!-- Label for Code activity -->
    <string name="title_code">Code</string>

    <!-- Label shown the company name with code string -->
    <string name="company_code">%1$s token is:</string>

    <!-- Label shown in the notification for code -->
    <string name="notification_code">Your token is: %1$s</string>

</resources>
