<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/content_padding_normal"
    android:paddingRight="@dimen/content_padding_normal"
    tools:context=".ui.SignUpActivity" >

    <ImageView
        android:src="@drawable/notifier_logo"
        style="@style/Auth.Title" />

    <LinearLayout
        android:background="@drawable/login_fields_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" >

        <EditText
            android:hint="@string/signup_name"
            android:id="@+id/name_text"
            android:inputType="textPersonName"
            style="@style/Auth.EditText" >

            <requestFocus />
        </EditText>

        <EditText
            android:hint="@string/signup_cellphone"
            android:id="@+id/username_cellphone"
            android:inputType="phone"
            style="@style/Auth.EditText" />

        <EditText
            android:hint="@string/signup_email"
            android:id="@+id/email_text"
            android:inputType="textEmailAddress"
            style="@style/Auth.EditText" />

        <EditText
            android:background="@null"
            android:hint="@string/signup_password"
            android:id="@+id/password_text"
            android:inputType="textPassword"
            style="@style/Auth.EditText" />

        <FrameLayout
            style="@style/Auth.WrapperButton" >

            <Button
                android:id="@+id/signup"
                android:text="@string/signup_signup"
                style="@style/Auth.Button" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
